--- a/DachaResort.ipynb
+++ b/DachaResort.ipynb
@@ -9,26 +9,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello World\n"
+      "Hello World!!!\n"
      ]
     }
    ],
    "source": [
-    "text = \"Hello World\"\n",
+    "text = \"Hello World!!!!!!\"\n",
     "\n",
-    "print(text)"
+    "print(text)\n",
+    "print(\"This is a test\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,11 +38,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is the new feature\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"This is the new feature\")"
    ]
   }
  ],
